# windows-service-detector-rs

./: Cargo.toml  LICENSE  README.md  example-service-test.ps1
examples/: service.rs
src/: lib.rs
