[package]
name = "windows-service-detector"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Okamoto <oko+github@oko.io>"]
license = "MIT"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
]

[dev_dependencies]
windows-service = "0.6.0"